@@ -34,7 +34,9 @@ def discern_loc(base, pkg, extension='.tbz2'):
 
 _metadata_rewrites = {
     "depends":"DEPEND", "rdepends":"RDEPEND", "post_rdepends":"PDEPEND",
-    "use":"USE", "eapi_obj":"EAPI", "CONTENTS":"contents", "provides":"PROVIDE"}
+    "use":"USE", "eapi_obj":"EAPI", "CONTENTS":"contents", "provides":"PROVIDE",
+    "source_repository":"repo",
+}
 
 def generate_attr_dict(pkg, portage_compatible=True):
     d = {}
