@@ -182,7 +182,7 @@ class base(metadata.package):
         "depends", "rdepends", "post_rdepends", "provides", "license",
         "slot", "keywords", "eapi_obj", "restrict", "description", "iuse",
         "chost", "cbuild", "ctarget", "homepage", "properties",
-        "required_use", "defined_phases", "repository")
+        "required_use", "defined_phases", "source_repository")
 
     _config_wrappables = dict((x, alias_class_method("evaluate_depset"))
         for x in ["depends", "rdepends", "post_rdepends", "fetchables",
@@ -214,7 +214,7 @@ class base(metadata.package):
         s.data.pop("DEFINED_PHASES", "").split()), False)
     _get_attr["homepage"] = lambda s:s.data.pop("HOMEPAGE", "").strip()
     _get_attr["required_use"] = generate_required_use
-    _get_attr["repository"] = get_repo_id
+    _get_attr["source_repository"] = get_repo_id
 
     __slots__ = tuple(_get_attr.keys() + ["_pkg_metadata_shared"])
 
